--- a/index.html
+++ b/index.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chris Fury Portfolio</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chris Fury Portfolio</title>
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="../fontawesome/css/all.min.css" />
-</head>
-
-<body id="bg-img">
-  <header>
-    <div class="menu-btn">
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-    </div>
-    <nav class="menu">
-      <div class="menu-branding">
-        <div class="portrait"></div>
+  <body id="bg-img">
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
       </div>
-      <ul class="menu-nav">
-        <li class="nav-item current">
-          <a href="index.html" class="nav-link">
-            Home
-          </a>
-        </li>
+      <nav class="menu">
+        <div class="portrait"></div>
+        <div class="menu-branding"></div>
+        <ul class="menu-nav">
+          <li class="nav-item current">
+            <a href="index.html" class="nav-link">
+              Home
+            </a>
+          </li>
 
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">
-            About me
-          </a>
-        </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">
+              About me
+            </a>
+          </li>
 
-        <li class="nav-item">
-          <a href="projects.html" class="nav-link">
-            My projects
-          </a>
-        </li>
+          <li class="nav-item">
+            <a href="projects.html" class="nav-link">
+              My projects
+            </a>
+          </li>
 
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link">
-            Contact
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">
+              Contact
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-  <main class="home">
-    <h1 class="lg-heading">Chis <span class="text-secondary">Fury</span></h1>
-    <h2 class="sm-heading">Web Developer, Programmer, Designer, Engineer</h2>
-    <div class="icons">
-      <a href="/">
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-github"></i>
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-linkedin"></i>
-      </a>
-    </div>
-  </main>
-</body>
-<script src="./js/index.js"></script>
-
+    <main class="home">
+      <h1 class="lg-heading">
+        Krzysztof <span class="text-secondary">Kłapczyk</span>
+      </h1>
+      <h2 class="sm-heading">Web Developer, Programmer, Engineer</h2>
+      <div class="icons">
+        <a href="https://github.com/FuryChris" target="blank">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+    </main>
+    <footer id="main-footer">Copyright &copy; 2020</footer>
+  </body>
+  <script src="./js/index.js"></script>
 </html>
